<resources>
    <string name="app_name">MAD155Module4MCCWireless</string>

    <string name="imgDesc1">Company logo image</string>
    <string name="imgDescIphone">iPhone XR image</string>
    <string name="imgDescGalaxy">Galaxy 9S image</string>
    <string name="txtTagLine">You do you! Simple &#224; la carte cell service where you choose!</string>
    <string name="txtChoosePlan">Choose your plan and save!</string>

    <!-- will not need next in final proj-->
    <string name="txtBasicPlan">Basic Plan</string>
    <string name="txtUnlimitedBasic">&#8226; Unlimited Talk/Text,5GB Data</string>
    <string name="txtHotSpotBasic">&#8226;Hotspot - 500MB LTE</string>
    <string name="txtVidStreamBasic">&#8226;Streaming - DVD quality 480p</string>
    <string name="txtCanMexRoamBasic">&#8226;Canada/Mexico Roaming - Unlimited Talk/Text, 5GB 4G LTE Data</string>
    <string name="txtGlobalRoam">&#8226;Text/Data in more than 200 worldwide destinations</string>
    <string name="txtExtrasBasic">&#8226;Extras Included: Hulu</string>

    <string name="txtMidPlan">Middle Plan</string>
    <string name="txtUnlimitedMid">&#8226;Unlimited Talk/Text,10GB Data</string>
    <string name="txtHotSpotMid">&#8226;Hotspot - 50GB LTE</string>
    <string name="txtVidStreamMid">&#8226;Streaming - HD quality 1080p</string>
    <string name="txtCanMexRoamMid">&#8226;Canada/Mexico Roaming - Unlimited Talk/Text, 10GB 4G LTE Data</string>
    <string name="txtExtrasMid">&#8226;Extras Included: Hulu, Tidal</string>

    <string name="txtPremiumPlan">Premium Plan</string>
    <string name="txtUnlimitedPremium">&#8226;Unlimited Talk/Text,Data</string>
    <string name="txtHotSpotPremium">&#8226;Hotspot - 100GB LTE</string>
    <string name="txtVidStreamPremium">&#8226;Streaming - Full HD</string>
    <string name="txtCanMexRoamPremium">&#8226;Canada/Mexico Roaming - Unlimited Talk/Text/4G LTE Data</string>
    <string name="txtExtrasPremium">&#8226;Extras Included: Hulu, Tidal, Lookout, Prime</string>
    <!-- end-->

    <string name="btnChoosePlan">Next</string>
    <string name="btnSummary">Next</string>

    <string name="rbBasicPlan">Basic Plan - $20/month</string>
    <string name="rbMidPlan">Middle Plan - $35/month</string>
    <string name="rbPremiumPlan">Premium Plan - $50/month</string>

    <string name="txtAddOnSaveMore">Add on and save more!</string>
    <string name="txtOrderSummaryTitle">Order Summary</string>

    <string name="txtBasic">
            &#8226; Unlimited Talk/Text, 5GB Data \n
            &#8226;Hotspot - 500MB LTE  \n
            &#8226;Streaming - DVD quality 480p \n
            &#8226;Canada/Mexico Roaming - Unlimited Talk/Text,\n\t\t\t 5GB 4G LTE Data \n
            &#8226;Text/Data in more than 200 worldwide destinations \n
            &#8226;Extras Included: Hulu
    </string>
    <string name="txtMid">
            &#8226; Unlimited Talk/Text, 10GB Data \n
            &#8226;Hotspot - 50GB LTE  \n
            &#8226;Streaming - HD quality 1080p \n
            &#8226;Canada/Mexico Roaming - Unlimited Talk/Text,\n\t\t\t 10GB 4G LTE Data \n
            &#8226;Text/Data in more than 200 worldwide destinations \n
            &#8226;Extras Included: Hulu, Tidal
    </string>
    <string name="txtPremium">
            &#8226; Unlimited Talk/Text, Data \n
            &#8226;Hotspot - 100GB LTE  \n
            &#8226;Streaming - Full HD \n
            &#8226;Canada/Mexico Roaming - Unlimited Talk/Text/4G LTE Data \n
            &#8226;Text/Data in more than 200 worldwide destinations \n
            &#8226;Extras Included: Hulu, Tidal, Lookout, Prime
    </string>

    <string name="cbIPhoneXR">\tBLUE Apple iPhone XR - 64GB \n
            \tPrice = $749.99 \n\tor $31.35 for 18 months
    </string>

    <string name="cbGalaxy9S">\tROSE Samsung Galaxy 9S - 64GB \n
            \tPrice = $549.99 \n\tor TODAY ONLY SPECIAL -&gt;\n\t$25.00 for 18 months
    </string>

    <string name="txtThisWeeksDeals">
        &#8226;  Buy ONE phone &amp; receive a $50 Visa Gift Card\n
        &#8226;Buy TWO phones or more &amp; receive a $100 Visa Gift Card
    </string>

    <string-array name="spnIphone">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="spnGalaxy">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="rbPayFull">Pay in full for phones</string>
    <string name="rbPayMonthly">Pay monthly for phones</string>

    <string name="btnOrderTotals">Click to view Order Totals</string>


</resources>
