<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="338dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/imgDesc1"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/txtTagLine"
        android:layout_width="249dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/txtTagLine"
        android:textAlignment="center"
        android:textColor="#11d8ff"
        android:textSize="12sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <TextView
        android:id="@+id/txtChoosePlan"
        android:layout_width="328dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/txtChoosePlan"
        android:textAlignment="center"
        android:textColor="#ffd50d"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTagLine" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="298dp"
        android:layout_height="386dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoosePlan">

        <RadioButton
            android:id="@+id/rbBasicPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rbBasicPlan"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtBasic"
            android:layout_width="345dp"
            android:layout_height="108dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txtBasic"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="267dp" />

        <RadioButton
            android:id="@+id/rbMidPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbMidPlan"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtMid"
            android:layout_width="345dp"
            android:layout_height="108dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txtMid"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="488dp" />

        <RadioButton
            android:id="@+id/rbPremiumPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbPremiumPlan"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtPremium"
            android:layout_width="345dp"
            android:layout_height="108dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/txtPremium"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="607dp" />

    </RadioGroup>

    <Button
        android:id="@+id/btnChoosePlan"
        android:layout_width="157dp"
        android:layout_height="49dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/btnChoosePlan"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />


</android.support.constraint.ConstraintLayout>