<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseDeal">

    <TextView
        android:id="@+id/txtChoosePlan2"
        android:layout_width="328dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/txtAddOnSaveMore"
        android:textAlignment="center"
        android:textColor="#ffd50d"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="193dp"
        android:layout_height="110dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/imgDesc1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/txtChoosePlan"
        android:layout_width="328dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/txtChoosePlan"
        android:textAlignment="center"
        android:textColor="#ffd50d"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="298dp"
        android:layout_height="65dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtChoosePlan">

        <RadioButton
            android:id="@+id/rbBasicPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbBasicPlan"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbMidPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/rbMidPlan"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbPremiumPlan"
            android:layout_width="342dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rbPremiumPlan"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </RadioGroup>


</android.support.constraint.ConstraintLayout>